# 1password-tools

./: 1password_clear_cache.py  1password_dedupe.py  1password_fill_username_from_email.py  1password_trash_aliases.py  README.md  op_cache.py  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
tests/: conftest.py  test_cache.py  test_integration.py  test_merge_logic.py  test_normalization.py  test_password_history.py  test_proton_alias.py
